welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:1: error: '(' expected but identifier found.
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = { if bOk {if c>b {return true} else {return false}} else {return b>a && c>b}} 
                                                             ^inOrder:1: error: illegal start of simple expression
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = { if bOk {if c>b {return true} else {return false}} else {return b>a && c>b}} 
                                                                                                                                    ^