welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = { if bOk {if c>b {return true} else {return false}} else {return b>a && c>b}}